<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/activity_background">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/selection_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/btn_manual_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/manual_input_button" />

        <Button
            android:id="@+id/btn_esp_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/esp_input_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>